Fixed an issue where the footer would appear translucent and behind the content.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300);
 
-html, body, .container-page{
-	height: 100%;
-}
-
 body {
 	padding-top: 50px;
 	padding-bottom: 20px;
